--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 a, p, h1, h2, h3, button, input{
-    font-family: "Playfair Display", serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 body{
     margin: 0;
@@ -16,6 +16,7 @@ body{
     backdrop-filter: blur(18px);
     border-radius: 30px;
     padding: 3%;
+    border: solid 2px rgba(255, 255, 255, 0.226);
 }
 header{
     width: 100%;
@@ -39,4 +40,98 @@ header{
     padding: 0 20px;
     color: white;
     gap: 10px;
+}
+.right{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header > .right > nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 70%;
+}
+header > .right > nav > a{
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 400;
+    transition: all 0.3s ease;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px;
+    border: 1px solid transparent;
+    border-radius: 100px;
+}
+header > .right > nav > a:hover{
+    background-color: rgba(240, 248, 255, 0.349);
+    backdrop-filter: blur(2px);
+    border: solid 1px rgba(128, 128, 128, 0.144);
+    box-shadow: 0 0 10px rgba(73, 73, 73, 0.24);
+    border-radius: 100px;
+}
+.active{
+    background-color: rgba(240, 248, 255, 0.349);
+    backdrop-filter: blur(2px);
+    border: solid 1px rgba(128, 128, 128, 0.144);
+    box-shadow: 0 0 10px rgba(73, 73, 73, 0.24);
+    border-radius: 100px;
+}
+.notification{
+    width: 50px;
+    height: 50px;
+    background-color: rgba(240, 248, 255, 0.349);
+    backdrop-filter: blur(2px);
+    border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: aliceblue;
+    font-size: 15px;
+}
+.auth{
+    height: 100%;
+    width: 20%;
+    background-color: rgba(240, 248, 255, 0.349);
+    backdrop-filter: blur(2px);
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    padding: 0 3px;
+    justify-content: space-between;
+}
+.auth > img{
+    height: 80%;
+    border-radius: 100px;
+    border: 1px solid rgb(25, 182, 25);
+}
+.user-info{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.user-info > .username{
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0;
+
+}
+.user-info > .tag{
+    color: rgba(255, 255, 255, 0.397);
+    font-weight: 100;
+    margin: 0;
+    font-size: 14px;
+}
+.auth > .fa-chevron-down{
+    margin: 0 30px;
+    color: aliceblue;
 }
