--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body{
 }
 header{
     width: 100%;
-    height: 50px;
+    height: 7.5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -37,7 +37,7 @@ header{
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 5%;
     color: white;
     gap: 10px;
 }
@@ -123,7 +123,6 @@ header > .right > nav > a:hover{
     font-size: 18px;
     font-weight: 700;
     margin: 0;
-
 }
 .user-info > .tag{
     color: rgba(255, 255, 255, 0.397);
@@ -132,6 +131,6 @@ header > .right > nav > a:hover{
     font-size: 14px;
 }
 .auth > .fa-chevron-down{
-    margin: 0 30px;
+    margin-right: 30px;
     color: aliceblue;
 }
